<resources>
    <string name="app_name">LoginDemo</string>
    <string name = "academic_prompt"> 请选择学历 </string>
    <string-array name = "academic" >
        <item> 博士 </item>
        <item> 硕士 </item>
        <item> 大学 </item>
        <item>  高中</item>
    </string-array>

    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="welcome_to_DIY">欢迎来到DIY</string>
    <string name="confirm_password">确认密码</string>
    <string name="sex">性别</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="education">学历</string>
    <string name="hobby">爱好</string>
    <string name="swim">游泳</string>
    <string name="music">音乐</string>
    <string name="reading">读书</string>
    <string name="female">女</string>
    <string name="male">男</string>

</resources>
